# immigration-rl

./: .dockerignore  .gitignore  Dockerfile  ENHANCEMENT_PLAN.md  README.md  __init__.py  baseline_results.json  client.py  inference.py  openenv.yaml  out.txt  project_manual.md  pyproject.toml  requirements.txt
dashboard/: index.html
data/: immigration_policies.json
graders/: graders.py
models/: models.py
server/: app.py  data_generator.py  environment.py  main.py
tests/: full_verification.py  rl_proof.py  smoke_test.py  test_environment.py
